# cmsis_dap_tcp_esp32

./: README.md  sdkconfig.esp32s3_devkitc_1  sdkconfig.xiao_esp32c6
host/: uart_bridge.sh
main/: CMakeLists.txt  Kconfig.projbuild  cmsis_dap_tcp.c  cmsis_dap_tcp.h  cpu_usage.c  cpu_usage.h  main.c
